--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -1,24 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
-.clearfix::after{
-  content: "";
-  display: block;
-  clear: both;
-}
-
-
-body {
-  min-height: 100%;
-  background: #f5f5f5;
-  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-  font-size: 14px;
-  color: #333;
-  line-height: 1;
-}
-
-
 .container {
   padding: 0 0 220px;
   .header{
@@ -28,6 +7,7 @@ body {
     h1 {
       margin: 40px 0 0;
       display: inline-block;
+
       a {
         width: 185px;
         height: 49px;
@@ -42,12 +22,15 @@ body {
     display: block;
     .login-panel {
       max-width: none;
-      width: 456px;
+      max-width: 456px;
       margin: 0 auto;
       background: #fff;
       &__no-account {
         padding: 40px 64px;
         text-align: center;
+        @include max-screen($sm) {
+          padding: 24px 32px;
+        }
         p {
           font-size: 14px;
           margin: 0;
@@ -65,6 +48,9 @@ body {
       &__sns {
         padding: 32px 64px;
         border-top: 1px solid #eee;
+        @include max-screen($sm) {
+          padding: 24px 32px;
+        }
         &-facebook {
           position: relative;
           background-color: #385185;
@@ -115,6 +101,12 @@ body {
             line-height: 1;
             font-size: 20px;
           }
+        }
+      }
+      &__mail {
+        padding: 32px 64px;
+        @include max-screen($sm) {
+          padding: 24px 32px;
         }
       }
       &__form {
