--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "./header";
 @import "./main-top";
 @import "./footer";
+@import "font-awesome-sprockets";
 @import "font-awesome";
 @import "./icon";
 @import "./show-products";
