--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,14 +1,21 @@
 .main-header
   .main-header__inner
-    %h1.l-left
-      = link_to root_path do
-        = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2777205881"
-    %form.search-box
-      %input.search-form{type: "search", name: "keyword", placeholder: "キーワードから探す"}
-      / = form_for [] do |f|
-      /   = f.text_field :product, class: "search-form", placeholder: "何をお探しですか?"
-      = fa_icon "search"
-    .main-header__nav-box
+    .clearfix
+      %h1.l-left
+        = link_to root_path do
+          = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2777205881"
+      %nav.right-box--xs
+        %ul.header-nav
+          %li
+            = link_to "ログイン", user_session_path, class: "main-header__btn"
+          %li
+            = link_to "新規会員", new_user_registration_path, class: "main-header__signup"
+      %form.search-box
+        %input.search-form{type: "search", name: "keyword", placeholder: "キーワードから探す"}
+        / = form_for [] do |f|
+        /   = f.text_field :product, class: "search-form", placeholder: "何をお探しですか?"
+        = fa_icon "search"
+    .main-header__nav-box.clearfix
       %nav.left-box
         %ul.search-box
           %li.list-nav
