--- a/app/assets/stylesheets/_exhibit.scss
+++ b/app/assets/stylesheets/_exhibit.scss
@@ -1,33 +1,26 @@
-* {
-  box-sizing: border-box;
-}
-.clearfix::after{
-  content: "";
-  display: block;
-  clear: both;
-}
-body {
-  min-height: 100%;
-  background: #f5f5f5;
-  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
-  font-size: 14px;
-  color: #333;
-  line-height: 1;
-}
-
 .header-logo{
   text-align: center;
   height: 128px;
   width: 100%;
+  @include max-screen($sm) {
+    height: auto;
+  }
   h1 {
     margin: 40px 0 0;
     display: inline-block;
+    @include max-screen($sm) {
+      margin: 11px 0 12px;
+    }
     a {
       width: 185px;
       height: 49px;
       img {
         width: 185px;
         height: 49px;
+        @include max-screen($sm) {
+          width: 120px;
+          height: 33px;
+        }
       }
     }
   }
