--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,13 +1,20 @@
 .main-header {
-  height: 140px;
   width: 100%;
   background-color: $white;
-  position: relative;
   &__inner {
     padding: 8px 0 0;
-    height: 90px;
     width: 1020px;
     margin: 0 auto;
+    @include max-screen($lg) {
+      width: 700px;
+    }
+    @include max-screen($sm) {
+      width: 500px;
+    }
+    @include max-screen($xs) {
+      width: 100%;
+      padding: 8px;
+    }
   }
 }
 
@@ -16,25 +23,43 @@ h1.l-left {
   width: 135px;
   height: 39px;
   float: left;
+  @include max-screen($xs) {
+    margin-bottom: 8px;
+  }
   img {
     width: 135px;
     height: 40px;
   }
 }
 
+
 form.search-box {
   height: 44px;
   width: calc(100% - 150px);
   position: relative;
   float: right;
+  @include max-screen($xs) {
+    height: 44px;
+    width: 100%;
+    position: relative;
+  }
   input.search-form {
     border: 1px solid $lightGray;
     border-radius: 2px;
     height: 38px;
-    width: calc(100% - 20px);
-    margin: 0 10px;
-    padding: 0 10px;
-    margin-top: 2px;
+    width: 100%;
+    padding: 9px 32px 9px 8px;
+    @include max-screen($xs) {
+      background: #eee;
+      border: 1px solid transparent;
+      border-radius: 2px;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      height: 38px;
+      padding: 0 10px;
+      -webkit-transition: border-color ease-out .3s;
+      transition: border-color ease-out .3s;
+    }
   }
   i.icon-search {
     position: absolute;
@@ -57,6 +82,9 @@ a {
 
 .main-header__nav-box {
   margin: 8px 0 0;
+  @include max-screen($xs) {
+      margin: 0;
+    }
   nav.left-box {
     float: left;
     li.list-nav {
@@ -118,7 +146,37 @@ a {
   }
   nav.right-box {
     float: right;
+    @include max-screen($xs) {
+      display: none;
+    }
+    li {
+      display: inline-block;
+      line-height: 36px;
+      font-size: 14px;
+      a.main-header__btn {
+        background-color: $red;
+        text-align: center;
+        padding: 7px;
+        border-radius: 4px;
+        border: 1px solid $red;
+        color: $white;
+      }
+      a.main-header__signup {
+        text-align: center;
+        padding: 7px;
+        border-radius: 4px;
+        border: 1px solid $lightBlue;
+        color: $lightBlue;
+      }
+    }
+  }
+}
 
+nav.right-box--xs {
+  display: none;
+  @include max-screen($xs) {
+    display: block;
+    float: right;
     li {
       display: inline-block;
       line-height: 36px;
