--- a/app/assets/stylesheets/_userInfo.scss
+++ b/app/assets/stylesheets/_userInfo.scss
@@ -23,10 +23,19 @@
 .user-info {
   float: right;
   display: block;
+  @include max-screen($lg) {
+    float: none;
+  }
+  @include max-screen($md) {
+    width: 100%;
+  }
   &-section {
     width: 700px;
     margin: 0 auto;
     background: #fff;
+    @include max-screen($md) {
+      width: 100%;
+    }
     h2 {
       padding: 8px 24px;
       font-size: 24px;
@@ -35,14 +44,19 @@
       margin: 0;
     }
     &-attenction{
+      padding: 0 40px;
       text-align: center;
       border-top: 1px solid #f5f5f5;
+      line-height: 1.5;
     }
     &__form {
       padding: 64px;
       border-top: 1px solid #f5f5f5;
+      @include max-screen($sm) {
+        padding: 40px;
+      }
       &-content {
-        // max-width: 320px;
+        max-width: 320px;
         margin: 0 auto;
         &-error {
           margin: 8px 0 0;
