--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -3,13 +3,26 @@
   width: 1020px;
   padding-bottom:40px;
   padding-top: 40px;
+  @include max-screen($lg) {
+    width: 700px;
+  }
+  @include max-screen($sm) {
+    width: 100%;
+  }
 
 //sideBar
   &__sideBar{
     float: left;
     width: 280px;
     margin-right:40px;
-
+    @include max-screen($lg) {
+      width: 700px;
+      float: none;
+      margin: 40px auto 0;;
+    }
+    @include max-screen($lg) {
+      width: 100%;
+    }
     .sideBar-icon{
       float: right;
       color:#ccc;
@@ -17,6 +30,9 @@
     &__myLists{
       list-style: none;
       width: 280px;
+      @include max-screen($lg) {
+        width: auto;
+      }
     }
     &__myList{
       border:solid 1px #EEE;
@@ -40,6 +56,9 @@
       font-size:16px;
       margin-top:40px;
       font-weight: bold;
+      @include max-screen($sm) {
+        margin: 40px 4% 0;
+      }
     }
     &__sales{
       margin-bottom:8px;
@@ -53,7 +72,6 @@
       font-size:12px;
       color: #333;
       background-color: #fff;
-
       & + &{
         border-top:none;
       }
@@ -70,6 +88,9 @@
       font-size:16px;
       margin-top:40px;
       font-weight: bold;
+      @include max-screen($sm) {
+        margin: 40px 4% 0;
+      }
     }
     &__setting{
       margin-bottom:8px;
@@ -97,11 +118,16 @@
   }
 
 //main
-
 .myPage__content{
   width: 700px;
   float:right;
-
+  @include max-screen($lg) {
+    float: none;
+    margin: 0 auto;
+  }
+  @include max-screen($md) {
+    width: 100%;
+  }
   &__top__header{
     height: 200px;
     @include background_profile;
@@ -133,13 +159,11 @@
       display: inline-block;
     }
   }
-
   &__top__container__tab__notice{
     width: 50%;
     float: left;
     text-align: center;
     font-size:16px;
-
     &__font{
       font-size:16px;
       height: 72px;
@@ -147,7 +171,6 @@
       font-weight: bold;
     }
   }
-
   &__top__container__notice__show{
     width: 100%;
     height: 200px;
@@ -157,14 +180,12 @@
     clear: both;
     color:#ccc;
   }
-
   &__top__container__tab__todo{
     width: 50%;
     background-color:#eee;
     float: right;
     text-align: center;
     font-size:16px;
-
     &__font{
       font-size:16px;
       height: 72px;
@@ -172,7 +193,6 @@
       font-weight: bold;
     }
   }
-
   &__top__container__todo__show{
     width: 100%;
     height: 200px;
@@ -183,9 +203,6 @@
     clear: both;
     color:#ccc;
   }
-
-
-
   &__bottom__header{
     line-height: 72px;
     font-size: 16px;
@@ -194,14 +211,11 @@
     margin-top:40px;
     font-weight: bold;
   }
-
-
   &__bottom__container__tab__purchase{
     width: 50%;
     float: left;
     text-align: center;
     font-size:16px;
-
     &__font{
       font-size:16px;
       height: 72px;
@@ -209,7 +223,6 @@
       font-weight: bold;
     }
   }
-
   &__top__container__purchase__show{
     width: 100%;
     height: 200px;
@@ -219,7 +232,6 @@
     clear: both;
     color:#ccc;
   }
-
   &__bottom__container__tab__purchased{
     width: 50%;
     background-color:#eee;
@@ -233,7 +245,6 @@
       font-weight: bold;
     }
   }
-
   &__top__container__purchased__show{
     width: 100%;
     height: 200px;
@@ -244,29 +255,30 @@
     clear: both;
     color:#ccc;
   }
-
   &--tabColor{
     background-color: #fff;
     border-top:solid 2px #EA352C;
   }
 }
 
-
 //logoutPage
-
   .logoutBox{
     width: 700px;
     height:179px;
     background-color: #fff;
     float: right;
-
+    @include max-screen($lg) {
+      float: none;
+    }
+    @include max-screen($lg) {
+      width: 100%;
+    }
     &__content{
       padding:64px;
-
       &__button{
         margin: 0 auto;
         text-align:center;
-        width: 320px;
+        max-width: 320px;
         color:white;
         line-height: 48px;
         height: 48px;
@@ -287,13 +299,16 @@
 }
 
 //profile edit
-
 .profile{
   float:right;
   background-color: #fff;
   width: 700px;
-  height: 500px;
-
+  @include max-screen($lg) {
+    float: none;
+  }
+  @include max-screen($md) {
+    width: 100%;
+  }
   &__heading{
     font-size: 24px;
     padding: 8px 24px;
@@ -303,7 +318,6 @@
   &__header{
     padding: 72px 16px 24px;
     @include background_profile;
-    // background-color: gray;
     text-align: center;
     &__userImage{
       display: inline-block;
@@ -360,7 +374,6 @@
   &__content{
     padding: 40px 16px;
     background-color: #fff;
-
     &__textarea{
       display: block;
       width: 100%;
