--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -27,6 +27,7 @@
           = link_to "新着アイテム", list_products_path, class: "item__link"
         .item-exhibitor__item-box-content.clearfix
           = render @products
+        .item-exhibitor__item-box-content.clearfix
           = link_to "すべての商品を見る", list_products_path, class: "all-item-link"
 
 = render "/shared/footer"
