--- a/app/views/products/_my_product.html.haml
+++ b/app/views/products/_my_product.html.haml
@@ -5,4 +5,18 @@
 .edit-container
   = link_to "商品の編集", edit_product_path(@product), { class: "item-container__edit" }
   %p.edit-container__or or
-  = link_to "この商品を削除する", edit_product_path(@product), { class: "item-container__delete" }
+  %button.item-container__delete この商品を削除する
+
+.overlay
+  #modalwin.modalwin-hide
+    %h1.delete
+      確認
+    %p.delete-text
+      削除すると二度と復活できません。
+      %br
+      %br
+      本当に削除しますか？
+    .cancel-btn
+      = link_to "キャンセル", product_path, {class: "back-show"}
+    .delete-btn
+      = link_to "削除する", product_path, {class: "back-delete"}
