--- a/app/views/products/_my_product.html.haml
+++ b/app/views/products/_my_product.html.haml
@@ -19,4 +19,4 @@
     .cancel-btn
       = link_to "キャンセル", product_path, {class: "back-show"}
     .delete-btn
-      = link_to "削除する", product_path, {class: "back-delete"}
+      = link_to "削除する", product_path(params[:id]), class: "back-delete", method: :delete
