--- a/app/views/products/_my_product.html.haml
+++ b/app/views/products/_my_product.html.haml
@@ -4,5 +4,5 @@
 
 .edit-container
   = link_to "商品の編集", edit_product_path(@product), { class: "item-container__edit" }
-  %p.edit-container__or or
+  %p.edit-container__or
   = link_to "この商品を削除する", edit_product_path(@product), { class: "item-container__delete" }
