--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -144,6 +144,7 @@
             font-size: 16px;
           }
         }
+
         &-form-certification {
           margin: 24px 0 0;
         }
@@ -156,10 +157,8 @@
               width: 100%;
               line-height: 48px;
               font-size: 14px;
-              // transition: all ease-out .3s;
               cursor: pointer;
               text-align: center;
-
         }
         &-form-forgot {
           display: block;
@@ -180,6 +179,9 @@
   padding: 40px 0;
   text-align: center;
   background: #f5f5f5;
+  @include max-screen($sm) {
+    width: 100%;
+  }
   ul {
     margin: 0;
     padding: 0;
@@ -188,6 +190,10 @@
       display: inline-block;
       margin: 0 0 0 16px;
       font-size: 12px;
+      @include max-screen($sm) {
+        display: block;
+        margin: 16px 0 0;
+      }
       a {
         display: block;
         color: #333;
@@ -195,7 +201,7 @@
       }
     }
   }
-  &-icon {
+  .footer-icon {
     display: block;
     color: #333;
     width: 80px;
@@ -210,7 +216,6 @@
     }
   }
 }
-
 
 #flash_alert{
   color:red;
