--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -49,10 +49,14 @@
   background: #fff;
   margin: 0 auto 0;
   width: 700px;
+  @include max-screen($sm) {
+    width: 100%;
+    padding: 24px 16px 55px 16px;
+  }
 }
 
 .item-container {
-  padding: 0 40px 40px;
+  padding: 24px 40px 40px;
   background: #fff;
   margin: 40px auto 0;
   width: 700px;
@@ -60,7 +64,6 @@
     width: 100%;
     padding: 24px 16px 55px 16px;
   }
-
   h1 {
     font-size: 24px;
     text-align: center;
@@ -152,6 +155,7 @@
     }
     display: block;
     @include button_buy;
+    margin: 55px 0 0;
   }
   &__edit {
     height: 45px;
@@ -186,12 +190,18 @@
       color: #333;
       line-height: 1.5;
       margin: 0;
+      @include max-screen($sm) {
+        font-size: 14px;
+      }
     }
   }
   &__button {
     margin: 16px 0 0;
     &-left {
       float: left;
+      @include max-screen($sm) {
+        float: none;
+      }
       &-like {
         display: inline-block;
         color: #333;
@@ -214,6 +224,10 @@
     &-right {
       float: right;
       margin: 8px 0 0;
+      @include max-screen($sm) {
+        float: none;
+        margin: 16px 0 0;
+      }
       a {
         display: inline-block;
         color: #0099e8;
@@ -225,10 +239,11 @@
 
 .item-link {
   margin: 24px auto 0;
-  width: 700px;
+  max-width: 700px;
   padding: 0;
   @include max-screen($sm) {
     margin: 24px 4% 0;
+
   }
   &__angle {
     font-size: 15px;
