--- a/app/views/products/_otheruser_product.html.haml
+++ b/app/views/products/_otheruser_product.html.haml
@@ -1,5 +1,13 @@
 #item-container
   = link_to "購入画面に進む", "", { class: "item-container__buy" }
+  %table.item-container__main-table_sm
+    = render "product_table"
+  .item-container__price_sm
+    %span.item-container__price-price= price_format(@product.price)
+    %span.item-container__price-tax (税込)
+    %span.item-container__price-fee
+      = @product.shipping_burden == "送料込み（出品者負担）" ? "送料込み" : "着払い"
+  = link_to "購入画面に進む", "", { class: "item-container__buy_sm" }
   .item-container__description
     %p= @product.description
   .item-container__button.clearfix
@@ -7,7 +15,7 @@
       = link_to "", { class: "item-container__button-left-like" } do
         %i
         %span いいね！
-        %span{"data-num" => "like"} 仮
+        %span{"data-num" => "like"}
       = link_to "", { class: "item-container__button-left-report" } do
         %i
         %span 不適切な商品の報告
