--- a/app/views/products/_my_product.html.haml
+++ b/app/views/products/_my_product.html.haml
@@ -13,8 +13,7 @@
       確認
     %p.delete__text
       削除すると二度と復活できません。
-      %br
-      %br
+    %p.delete__text__confirm
       本当に削除しますか？
     .cancel__btn
       = link_to "キャンセル", product_path, {class: "cancel__btn__back"}
