--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,11 +5,12 @@
         = link_to root_path do
           = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2777205881"
       %nav.right-box--xs
-        %ul.header-nav
-          %li
-            = link_to "ログイン", user_session_path, class: "main-header__btn" unless user_signed_in?
-          %li
-            = link_to "新規会員", new_user_registration_path, class: "main-header__signup" unless user_signed_in?
+        - unless user_signed_in?
+          %ul.header-nav
+            %li
+              = link_to "ログイン", user_session_path, class: "main-header__btn"
+            %li
+              = link_to "新規会員", new_user_registration_path, class: "main-header__signup"
       %form.search-box
         %input.search-form{type: "search", name: "keyword", placeholder: "キーワードから探す"}
         / = form_for [] do |f|
