--- a/app/assets/stylesheets/bread_crumbs.scss
+++ b/app/assets/stylesheets/bread_crumbs.scss
@@ -7,10 +7,20 @@
 
   .breadcrumbs {
     overflow: visible;
-    width: 1000px;
+    width: 1020px;
     margin: 0 auto;
     padding: 17px 0 16px;
     white-space: normal;
+    @include max-screen($lg) {
+      width: 700px;
+    }
+    @include max-screen($sm) {
+      width: 500px;
+    }
+    @include max-screen($xs) {
+      width: 100%;
+      padding: 17px 8px 16px;
+    }
   }
   .current{
     font-weight: bold;
