--- a/app/assets/stylesheets/bread_crumbs.scss
+++ b/app/assets/stylesheets/bread_crumbs.scss
@@ -21,6 +21,13 @@
       width: 100%;
       padding: 17px 8px 16px;
     }
+    a {
+      color: #333;
+      &:hover {
+        opacity: 0.7;
+        text-decoration: underline;
+      }
+    }
   }
   .current{
     font-weight: bold;
