--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -182,6 +182,9 @@ a {
         border-radius: 4px;
         border: 1px solid $red;
         color: $white;
+        &:hover {
+          opacity: 0.7;
+        }
       }
       a.main-header__signup {
         text-align: center;
@@ -189,6 +192,11 @@ a {
         border-radius: 4px;
         border: 1px solid $lightBlue;
         color: $lightBlue;
+        &:hover {
+          color: $white;
+          background-color: $lightBlue;
+          opacity: 0.7;
+        }
       }
     }
   }
