--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -95,6 +95,7 @@ a {
         color: $gray;
         line-height: 40px;
         font-size: 14px;
+        display: block;
       }
       a.category:hover {
         color: $lightBlue;
@@ -108,6 +109,7 @@ a {
         color: $gray;
         line-height: 40px;
         font-size: 14px;
+        display: block;
       }
       a.brand:hover {
         color: $lightBlue;
@@ -126,6 +128,7 @@ a {
           font-size: 14px;
           line-height: 40px;
           color: $gray;
+          display: block;
         }
       }
       li.list:hover {
@@ -176,6 +179,7 @@ a {
         }
       }
       a.main-header__btn{
+        line-height: 40px;
         background-color: $red;
         text-align: center;
         padding: 7px;
@@ -187,6 +191,7 @@ a {
         }
       }
       a.main-header__signup {
+        line-height: 40px;
         text-align: center;
         padding: 7px;
         border-radius: 4px;
@@ -218,6 +223,7 @@ nav.right-box--xs {
         font-size: 14px;
       }
       a.main-header__btn {
+        line-height: 40px;
         background-color: $red;
         text-align: center;
         padding: 7px;
@@ -226,6 +232,7 @@ nav.right-box--xs {
         color: $white;
       }
       a.main-header__signup {
+        line-height: 40px;
         text-align: center;
         padding: 7px;
         border-radius: 4px;
