--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -210,6 +210,9 @@
         padding: 8px 16px;
         border-radius: 40px;
         text-decoration: none;
+        &:hover {
+          opacity: 0.7;
+        }
       }
       &-report {
         display: inline-block;
@@ -220,6 +223,9 @@
         padding: 8px 16px;
         border-radius: 40px;
         text-decoration: none;
+        &:hover {
+          opacity: 0.7;
+        }
       }
     }
     &-right {
@@ -233,6 +239,9 @@
         display: inline-block;
         color: #0099e8;
         text-decoration: none;
+        &:hover {
+          opacity: 0.7;
+        }
       }
     }
   }
@@ -258,6 +267,10 @@
     a {
       color: #0099e8;
       text-decoration: none;
+      &:hover {
+        opacity: 0.7;
+        text-decoration: underline;
+      }
       i {
         margin-right: 4px;
       }
@@ -273,6 +286,10 @@
     a {
       color: #0099e8;
       text-decoration: none;
+      &:hover {
+        opacity: 0.7;
+        text-decoration: underline;
+      }
       i {
         margin-left: 4px;
       }
@@ -302,6 +319,9 @@
         display: block;
         color: #0099e8;
         text-decoration: none;
+        &:hover {
+          opacity: 0.7;
+        }
         i {
           width: 44px;
           height: 44px;
@@ -355,6 +375,10 @@
       margin: 24px 0 8px;
       font-size: 22px;
       line-height: 1.4;
+      &:hover {
+        opacity: 0.7;
+        text-decoration: underline;
+      }
       @include max-screen($sm) {
         margin: 24px 8% 8px;
       }
