--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -150,6 +150,9 @@ a.footer__logo {
   display: block;
   margin: 40px 0 0;
   text-align: center;
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 p.footer__copyright {
