--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -134,7 +134,7 @@
           %li.list
             = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_jp.png?1966943736", class: "country"
             日本
-  %a.footer__logo{href: ""}
+  %a.footer__logo{href: "/"}
     = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?1966943736", class: "footer__logo__img"
   %p.footer__copyright
     © 2019 Mercari
