フッターのスタイルを修正しました

--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -125,10 +125,10 @@
         %h3
           国
         %ul.footer-list
-          %li.list
+          %li.list.us
             = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_us.png?1966943736", class: "country"
             United States
-          %li.list
+          %li.list.uk
             = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_uk.png?1966943736", class: "country"
             United Kingdom
           %li.list
