--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -48,6 +48,12 @@
       position: relative;
       top: 50px;
       right: 80px;
+      a {
+        display: inline-block;
+        &:hover {
+          opacity: 0.7;
+        }
+      }
     }
   }
   img.banner__image {
@@ -127,7 +133,7 @@ li.footer-cell {
     color: #fff;
     padding: 20px 0 0 0;
     li.list {
-      padding: 10px 0 0 0;
+      padding: 16px 0 0 0;
     }
   }
 }
@@ -144,6 +150,10 @@ a.link {
 
 img.country {
   height: 20px;
+}
+
+.us, .uk {
+  opacity: 0.3;
 }
 
 a.footer__logo {
@@ -202,3 +212,4 @@ p.footer__copyright {
     }
   }
 }
+
