--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -397,6 +397,10 @@
         font-size: 20px;
         color: #0099e8;
         text-decoration: none;
+        &:hover {
+          text-decoration: underline;
+          opacity: 0.7;
+        }
       }
     }
     &-content {
