--- a/app/assets/stylesheets/_profile_details.scss
+++ b/app/assets/stylesheets/_profile_details.scss
@@ -24,9 +24,25 @@
           background-size: cover;
           border-radius: 50%;
           margin: 0 auto;
+          img {
+            border-radius: 50%;
+            max-width: 180px;
+            height: 180px;
+            background-position: center center;
+            background-size: cover;
+            background-repeat: no-repeat;
+          }
           @include max-screen($sm) {
             width: 90px;
             height: 90px;
+            img {
+              border-radius: 50%;
+              max-width: 90px;
+              height: 90px;
+              background-position: center center;
+              background-size: cover;
+              background-repeat: no-repeat;
+            }
           }
         }
         h2 {
