--- a/app/views/products/_otheruser_product.html.haml
+++ b/app/views/products/_otheruser_product.html.haml
@@ -1,5 +1,9 @@
 #item-container
-  = link_to "購入画面に進む", "", { class: "item-container__buy" }
+  - unless @product.buyer_id
+    = link_to "購入画面に進む", purchase_path(@product.id), { class: "item-container__buy" }
+  - else
+    .item-container__sold
+      売り切れました
   %table.item-container__main-table_sm
     = render "product_table"
   .item-container__price_sm
