--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -134,6 +134,17 @@ li.footer-cell {
     padding: 20px 0 0 0;
     li.list {
       padding: 16px 0 0 0;
+      a {
+        display: block;
+        font-size: 13px;
+        color: #fff;
+        img {
+          margin: 0 8px 0 0;
+        }
+      }
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
