--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -126,14 +126,17 @@
           国
         %ul.footer-list
           %li.list.us
-            = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_us.png?1966943736", class: "country"
-            United States
+            %a{href: ""}
+              = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_us.png?1966943736", class: "country"
+              United States
           %li.list.uk
-            = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_uk.png?1966943736", class: "country"
-            United Kingdom
+            %a{href: ""}
+              = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_uk.png?1966943736", class: "country"
+              United Kingdom
           %li.list
-            = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_jp.png?1966943736", class: "country"
-            日本
+            %a{href: "/"}
+              = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/flag_jp.png?1966943736", class: "country"
+              日本
   %a.footer__logo{href: "/"}
     = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-white.svg?1966943736", class: "footer__logo__img"
   %p.footer__copyright
