--- a/app/views/shared/_exhibitor.html.haml
+++ b/app/views/shared/_exhibitor.html.haml
@@ -111,7 +111,7 @@
     %p
       また、出品をもちまして加盟店規約に同意したことになります。
     = f.submit "出品する", class: "button"
-    = link_to "戻る", :back, {class: "back"}
+    = link_to "もどる", :back, {class: "back"}
 - else
   .main__section__inner.clearfix
     = f.submit "変更する", class: "button"
