--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -168,6 +168,9 @@
     font-weight: solid;
     font-size: 14px;
     text-decoration: none;
+    &:hover {
+      opacity: 0.9;
+    }
   }
   &__delete {
     height: 45px;
@@ -181,6 +184,9 @@
     font-weight: solid;
     font-size: 14px;
     text-decoration: none;
+    &:hover {
+      opacity: 0.7;
+    }
   }
   &__description {
     padding: 32px 0 0;
