--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -231,6 +231,10 @@
     background-color:#fff;
     clear: both;
     color:#ccc;
+    &__list{
+      text-align: left;
+      line-height: 20px;
+    }
   }
   &__bottom__container__tab__purchased{
     width: 50%;
