--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -178,7 +178,7 @@
 
 #footer {
   width: 456px;
-  height: 220px;
+  // height: 220px;
   margin: 0 auto;
   padding: 40px 0;
   text-align: center;
