--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,4 +14,5 @@
     -# %script{type: "text/javascript"}
     -#   Payjp.setPublicKey(ENV["PAYJP_SECRET_KEY"]);
   %body
-    = yield
+    .wrap
+      = yield
