--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -172,10 +172,12 @@ $xs: 544px;
   font-weight: 600;
   font-size: 24px;
   text-decoration: none;
+  &:hover {
+    opacity: 0.7;
+  }
   @include max-screen($sm) {
     font-size: 18px;
     height: 56px;
-
   }
 }
 
