--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -177,7 +177,7 @@
     height: 45px;
     line-height: 45px;
     display: block;
-    margin: 0;
+    margin: 0 0 15px 0;
     background: $red;
     color: #fff;
     text-align: center;
