--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -165,6 +165,22 @@
       height: 56px;
     }
   }
+  &__sold_sm {
+    display: none;
+    @include max-screen($sm) {
+      display: block;
+      height: 56px;
+      line-height: 56px;
+      display: block;
+      background: #888;
+      color: $white;
+      line-height: 56px;
+      text-align: center;
+      font-weight: 600;
+      font-size: 18px;
+      text-decoration: none;
+    }
+  }
   &__buy_sm {
     @include min-screen($sm) {
       display: none;
