--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -216,6 +216,7 @@
     font-weight: solid;
     font-size: 14px;
     text-decoration: none;
+    cursor: pointer;
     &:hover {
       opacity: 0.7;
     }
